--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "afsoftware",
+  "homepage": "https://sysontec.github.io/sysontec",
+  "name": "sysontec",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,10 +21,13 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
