--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://ismaelfari1996.github.io/afsoftware",
-  "name": "afsoftware",
+  "homepage": "https://sysontec.github.io/sysontec",
+  "name": "sysontec",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
